lustre-collector/src/snapshots/lustre_collector__lnetctl_parser__tests__lnet_export_parse_no_bonding.snap
---
source: lustre-collector/src/lnetctl_parser.rs
expression: x
---
[
    LNetStat(
        SendCount(
            LNetStat {
                nid: "0@lo",
                param: Param(
                    "send_count",
                ),
                value: 9,
            },
        ),
    ),
    LNetStat(
        RecvCount(
            LNetStat {
                nid: "0@lo",
                param: Param(
                    "recv_count",
                ),
                value: 8,
            },
        ),
    ),
    LNetStat(
        DropCount(
            LNetStat {
                nid: "0@lo",
                param: Param(
                    "drop_count",
                ),
                value: 1,
            },
        ),
    ),
    LNetStat(
        HealthValue(
            LNetStat {
                nid: "0@lo",
                param: Param(
                    "health_value",
                ),
                value: 800,
            },
        ),
    ),
    LNetStat(
        SendCount(
            LNetStat {
                nid: "10.36.4.130@tcp",
                param: Param(
                    "send_count",
                ),
                value: 0,
            },
        ),
    ),
    LNetStat(
        RecvCount(
            LNetStat {
                nid: "10.36.4.130@tcp",
                param: Param(
                    "recv_count",
                ),
                value: 0,
            },
        ),
    ),
    LNetStat(
        DropCount(
            LNetStat {
                nid: "10.36.4.130@tcp",
                param: Param(
                    "drop_count",
                ),
                value: 0,
            },
        ),
    ),
    LNetStat(
        HealthValue(
            LNetStat {
                nid: "10.36.4.130@tcp",
                param: Param(
                    "health_value",
                ),
                value: 1000,
            },
        ),
    ),
]
