lustre-collector/src/snapshots/lustre_collector__lnetctl_parser__tests__lnet_global_show.snap
---
source: lustre-collector/src/lnetctl_parser.rs
expression: x
---
[
    LNetStat(
        HealthSensitiveValue(
            LNetStatGlobal {
                param: Param(
                    "health_sensitivity",
                ),
                value: 100,
            },
        ),
    ),
]
