lustre-collector/src/snapshots/lustre_collector__lnetctl_parser__tests__lnet_net_parse.snap
---
source: lustre-collector/src/lnetctl_parser.rs
expression: x
---
[
    LNetStat(
        SendCount(
            LNetStat {
                nid: "0@lo",
                param: Param(
                    "send_count",
                ),
                value: 942,
            },
        ),
    ),
    LNetStat(
        RecvCount(
            LNetStat {
                nid: "0@lo",
                param: Param(
                    "recv_count",
                ),
                value: 942,
            },
        ),
    ),
    LNetStat(
        DropCount(
            LNetStat {
                nid: "0@lo",
                param: Param(
                    "drop_count",
                ),
                value: 0,
            },
        ),
    ),
    LNetStat(
        HealthValue(
            LNetStat {
                nid: "0@lo",
                param: Param(
                    "health_value",
                ),
                value: 942,
            },
        ),
    ),
    LNetStat(
        SendCount(
            LNetStat {
                nid: "10.73.20.11@tcp",
                param: Param(
                    "send_count",
                ),
                value: 3825,
            },
        ),
    ),
    LNetStat(
        RecvCount(
            LNetStat {
                nid: "10.73.20.11@tcp",
                param: Param(
                    "recv_count",
                ),
                value: 3736,
            },
        ),
    ),
    LNetStat(
        DropCount(
            LNetStat {
                nid: "10.73.20.11@tcp",
                param: Param(
                    "drop_count",
                ),
                value: 30,
            },
        ),
    ),
    LNetStat(
        HealthValue(
            LNetStat {
                nid: "10.73.20.11@tcp",
                param: Param(
                    "health_value",
                ),
                value: 1000,
            },
        ),
    ),
]
