lustre-collector/src/snapshots/lustre_collector__lnetctl_parser__tests__lnet_parse2.snap
---
source: lustre-collector/src/lnetctl_parser.rs
expression: x
---
[
    LNetStat(
        SendCount(
            LNetStat {
                nid: "0@lo",
                param: Param(
                    "send_count",
                ),
                value: 0,
            },
        ),
    ),
    LNetStat(
        RecvCount(
            LNetStat {
                nid: "0@lo",
                param: Param(
                    "recv_count",
                ),
                value: 0,
            },
        ),
    ),
    LNetStat(
        DropCount(
            LNetStat {
                nid: "0@lo",
                param: Param(
                    "drop_count",
                ),
                value: 0,
            },
        ),
    ),
    LNetStat(
        HealthValue(
            LNetStat {
                nid: "0@lo",
                param: Param(
                    "health_value",
                ),
                value: 0,
            },
        ),
    ),
    LNetStat(
        SendCount(
            LNetStat {
                nid: "172.16.0.24@o2ib",
                param: Param(
                    "send_count",
                ),
                value: 0,
            },
        ),
    ),
    LNetStat(
        RecvCount(
            LNetStat {
                nid: "172.16.0.24@o2ib",
                param: Param(
                    "recv_count",
                ),
                value: 0,
            },
        ),
    ),
    LNetStat(
        DropCount(
            LNetStat {
                nid: "172.16.0.24@o2ib",
                param: Param(
                    "drop_count",
                ),
                value: 0,
            },
        ),
    ),
    LNetStat(
        HealthValue(
            LNetStat {
                nid: "172.16.0.24@o2ib",
                param: Param(
                    "health_value",
                ),
                value: 1000,
            },
        ),
    ),
    LNetStat(
        SendCount(
            LNetStat {
                nid: "172.16.0.28@o2ib",
                param: Param(
                    "send_count",
                ),
                value: 0,
            },
        ),
    ),
    LNetStat(
        RecvCount(
            LNetStat {
                nid: "172.16.0.28@o2ib",
                param: Param(
                    "recv_count",
                ),
                value: 0,
            },
        ),
    ),
    LNetStat(
        DropCount(
            LNetStat {
                nid: "172.16.0.28@o2ib",
                param: Param(
                    "drop_count",
                ),
                value: 0,
            },
        ),
    ),
    LNetStat(
        HealthValue(
            LNetStat {
                nid: "172.16.0.28@o2ib",
                param: Param(
                    "health_value",
                ),
                value: 1000,
            },
        ),
    ),
]
