lustre-collector/src/snapshots/lustre_collector__lnetctl_parser__tests__lnet_stats_parse.snap
---
source: src/lnetctl_parser.rs
expression: x
---
[
    LNetStat(
        SendLength(
            LNetStatGlobal {
                param: Param(
                    "send_length",
                ),
                value: 62502714567608,
            },
        ),
    ),
    LNetStat(
        RecvLength(
            LNetStatGlobal {
                param: Param(
                    "recv_length",
                ),
                value: 17084716480056,
            },
        ),
    ),
    LNetStat(
        DropLength(
            LNetStatGlobal {
                param: Param(
                    "drop_length",
                ),
                value: 568792,
            },
        ),
    ),
]
